# TelegramLeadAssistent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Codex-Prompting-System.md  Dockerfile  LICENSE  Makefile  PROMPTING_SYSTEM.md  README.md  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0e3f01f9c238_initial_schema.py  3b6e2a8d9f10_add_retention_cleanup_indexes.py  4dc3c0a1e7b2_seed_required_translation_languages.py  5f8c2d1a7b03_add_service_heartbeats.py  71c74f9e582d_add_failed_processing_job_status.py  7d2f6a9c4e11_add_processing_reply_chain_snapshot.py  8e3f5af41b2c_add_classification_route_statuses.py  9b31d6f7a4c2_add_translation_manager_jobs.py  a4e7c1d9b205_add_operational_alerts.py  c2a94b7d31e8_add_operator_sessions.py  d8a1e4c7f206_add_chat_access_verification_schedule.py  e3b7a1c9d402_add_classification_queue_timestamp.py  (+1 more)
app/: __init__.py  config.py  logging.py  metrics.py
app/bot/: __init__.py  __main__.py  application.py  (+5 more)
docs/: BACKLOG.md  BACKUP_RESTORE.md  DECISIONS.md  DEPLOYMENT.md  GO_LIVE_RUNBOOK.md  PROGRESS.md  SHADOW_MODE.md  SPEC.md  STAGING_TELEGRAM_ACCEPTANCE.md
prompts/: 00_REPOSITORY_AUDIT.md  01_NEXT_TASK.md  02_REVIEW_CURRENT_TASK.md  03_FIX_REVIEW_FINDINGS.md  04_MILESTONE_GATE.md  05_RELEASE_GATE.md  06_RECOVER_CONTEXT.md  07_BUGFIX.md  08_IMPLEMENT_SPEC_CHANGE.md
scripts/: create_mtproto_session.py  diagnose_chat_permissions.py  healthcheck.py  seed_languages.py  shadow_report.py  staging_telegram_acceptance.py
(+138 files in other folders)
