[project]
name = "telegram-lead-assistant"
version = "0.1.0"
description = "Operator-assisted Telegram community lead monitoring"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20,<4",
    "alembic>=1.15,<2",
    "asyncpg>=0.30,<1",
    "httpx>=0.28,<1",
    "openai>=1.75,<2",
    "pydantic-settings>=2.9,<3",
    "sqlalchemy[asyncio]>=2.0.40,<3",
    "telethon>=1.44,<1.45",
]

[dependency-groups]
dev = [
    "mypy>=1.15,<2",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.26,<1",
    "ruff>=0.11,<1",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app", "tests"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
asyncio_mode = "strict"
markers = [
    "integration: requires isolated infrastructure such as PostgreSQL",
]
